อัปเดต HomeManual และ FloatingManual

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,13 @@
       name="description"
       content="Since the beginning of civilization, water has played an important part in its development. Its cycle is one of the basic prerequisites for life."
     />
+
+    <!-- ฟอนต์ PT Sans -->
     <link
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
     <title>พลังงานหมุนเวียน</title>
 
     <!-- Cookie Consent CSS -->
@@ -21,12 +24,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"
     />
-    <!-- Include FontAwesome CSS สำหรับไอคอน -->
+
+    <!-- Font Awesome เวอร์ชัน 6 (แทนที่ของเก่า 4.7) -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHm+9TnXrZ1ldd59A4hD7yqRYiTrq5EAvFMWZ72D1SxYeuB4eQ6ZkScezW1X+2hKZ3J1Bg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
-    <!-- (Optional) Include Bootstrap CSS (หากต้องการให้ collapse ทำงานตามที่ Bootsnav คาดหวัง) -->
+
+    <!-- (Optional) Bootstrap CSS หากโปรเจ็กต์มีการใช้งาน Bootstrap -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -57,8 +65,6 @@
         });
       });
     </script>
-
-
 
     <!-- AOS JS -->
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
